tests-integration/tests/custom/semantic-errors/omitted-declaration/stderr.expected
Error:
    model.eprime:2:11:
  |
2 | such that x = 5
  |           ^
Error: Symbol not found "x"


